--- a/PYTHON FUNDAMENTALS.ipynb
+++ b/PYTHON FUNDAMENTALS.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black> **CONTENTS**\n",
+    " <font color = black> **Contents**\n",
     "\n",
     "```\n",
     "\n",
@@ -147,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black> **VARIABLES**"
+    " <font color = black> **Variables**"
    ]
   },
   {
@@ -4632,6 +4632,7 @@
     "from functools import reduce\n",
     "n = int(input(\"Enter a number: \"))\n",
     "inp = range(1, n+1)\n",
+    "\n",
     "\n",
     "if n == 0:\n",
     "    print(1)\n",
