--- a/PYTHON FUNDAMENTALS.ipynb
+++ b/PYTHON FUNDAMENTALS.ipynb
@@ -765,7 +765,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black>**TYPES OF ERRORS**"
+    "TYPES OF ERRORS"
    ]
   },
   {
