--- a/PYTHON FUNDAMENTALS.ipynb
+++ b/PYTHON FUNDAMENTALS.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black> **Contents**\n",
+    "CONTENTS\n",
     "\n",
     "```\n",
     "\n",
@@ -147,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black> **Variables**"
+    "VARIABLES"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black>**ORDER OF OPERATION**"
+    "ORDER OF OPERATION"
    ]
   },
   {
@@ -249,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black>**DATA TYPES**"
+    "DATA TYPES"
    ]
   },
   {
@@ -371,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black>**ARITHMETIC OPERATORS**"
+    "ARITHMETIC OPERATORS"
    ]
   },
   {
@@ -518,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black>**COMPARISON OPEARTORS**"
+    "COMPARISON OPEARTORS"
    ]
   },
   {
@@ -645,7 +645,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black>**IDENTITY OPERATORS**"
+    "IDENTITY OPERATORS"
    ]
   },
   {
@@ -695,7 +695,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black>**LOGICAL OPERATORS**"
+    "LOGICAL OPERATORS"
    ]
   },
   {
@@ -871,7 +871,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black>**CONTROL STRUCTURE (LOOPS) in Python**"
+    "CONTROL STRUCTURE (LOOPS) in Python"
    ]
   },
   {
@@ -885,7 +885,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = maroon>**IF-ELSE Loop**"
+    "IF-ELSE Loop"
    ]
   },
   {
@@ -933,7 +933,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black>**NESTED IF-ELSE LOOP**"
+    "NESTED IF-ELSE LOOP"
    ]
   },
   {
@@ -974,7 +974,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = Black>**WHILE LOOP**\n",
+    "WHILE LOOP\n",
     "    \n",
     "A while loop evaluates a condition, It continues to exeute the loop until the condition evaluates to true and\n",
     "exits out when the condition no longer holds true \n"
@@ -1055,7 +1055,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black>**FOR Loop**"
+    "FOR Loop"
    ]
   },
   {
@@ -1187,7 +1187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font black = maroon>**LOOP USING RANGE** "
+    "LOOP USING RANGE"
    ]
   },
   {
@@ -1278,7 +1278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black>**FUNCTIONS IN PYTHON** "
+    "FUNCTIONS IN PYTHON"
    ]
   },
   {
@@ -1391,15 +1391,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black>**DATA STRUCTURES IN PYTHON**"
+    "DATA STRUCTURES IN PYTHON"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = maroon>**LISTS -**\n",
-    "  An ordered mutable collection of objects"
+    "LISTS\n",
+    "\n",
+    "An ordered mutable collection of objects"
    ]
   },
   {
@@ -1519,7 +1520,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Processing Data in a List**\n",
+    "Processing Data in a List\n",
     "\n",
     "Lists are mutable, data can be added into and subtracted from a List. \n",
     "Operations performed on a list can cause the List to either grow or shrink in size.\n",
@@ -1821,7 +1822,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = maroon>**LIST INDEXING**"
+    "LIST INDEXING"
    ]
   },
   {
@@ -2313,7 +2314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**List Comprehension**"
+    "List Comprehension"
    ]
   },
   {
@@ -2411,7 +2412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color = black>**DICTIONARY**\n",
+    "DICTIONARY\n",
     "             \n",
     "A key-value, un-ordered, mutable collection of Objects.\n",
     "    \n",
@@ -2656,7 +2657,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color = black>**SETS**\n",
+    "SETS\n",
     "       \n",
     "A collection of unique mutable Objects.\n",
     "    \n",
@@ -2699,7 +2700,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Union**\n",
+    "Union\n",
     "\n",
     "Elements in set a and set b"
    ]
@@ -2730,7 +2731,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Intersection**\n",
+    "Intersection\n",
     "\n",
     "Elements common to two sets"
    ]
@@ -2761,7 +2762,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Difference**\n",
+    "Difference\n",
     "\n",
     "Elements present in the first set and not in the second set"
    ]
@@ -2792,7 +2793,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Symmetric Difference**\n",
+    "Symmetric Difference\n",
     "\n",
     "Symmetric difference between 2 sets A and B; returns the elements of A that are nor present in B and elements of B that are not present in A\n",
     "Elements common to both A and B are discarded\n"
@@ -2821,7 +2822,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**set.discard()**\n",
+    "set.discard()\n",
     "\n",
     "- Built-in method\n",
     "- Removes the element from the set only if the element is present in the set. \n",
@@ -2876,7 +2877,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**set.remove()**\n",
+    "set.remove()\n",
+    "\n",
     "- Built-in method\n",
     "- removes the element from the set only if the element is  present in the set, \n",
     "- If the element is not present in the set, then an error or exception is raised\n"
@@ -2931,7 +2933,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**set.add()**\n",
+    "set.add()\n",
     "\n",
     "Adds a given element to a set if the element is not present in the set.\n"
    ]
@@ -2984,7 +2986,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**set.clear()**\n",
+    "set.clear()\n",
     "\n",
     "clear() method removes all elements from the set.\n"
    ]
@@ -3015,7 +3017,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Set Comprehension**"
+    "Set Comprehension"
    ]
   },
   {
@@ -3044,7 +3046,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black>**TUPLES**\n",
+    "TUPLES\n",
     "    \n",
     "A collection of immutable Objects  \n",
     "    \n",
@@ -3074,7 +3076,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Tuple Assignment (packing/unpacking)**\n",
+    "Tuple Assignment (packing/unpacking)\n",
     "\n",
     "Tuple assignment offers a powerful feature of assigning values to multiple variables in one-go. It involves 2 steps\n",
     "- Tuple Packing\n",
@@ -3188,7 +3190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Operations of Tuples**"
+    "Operations of Tuples"
    ]
   },
   {
@@ -3330,7 +3332,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color = black>**STRINGS**  \n",
+    "STRINGS\n",
+    "\n",
     "An immutable sequence of characters "
    ]
   },
@@ -3525,7 +3528,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Parsing Strings**\n",
+    "Parsing Strings\n",
     "\n",
     "Assume, there is a string \"I received an email at 19:45 from hello@gmail.com and was asked to\"; and we are\n",
     "asked to extract the hostname i.e gmail.com"
@@ -3682,7 +3685,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Reading from a File**"
+    "Reading from a File"
    ]
   },
   {
@@ -3845,7 +3848,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Writing to a File**\n",
+    "Writing to a File\n",
     "\n",
     "To write into a file, it needs to be opened in ‘w’ mode (passed as a second parameter).\n",
     "If the file already exists, opening it in write mode clears out the old data and starts fresh (so be careful)\n",
@@ -3956,7 +3959,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Append to a File**\n",
+    "Append to a File\n",
     "\n",
     "\n",
     "- The file is created if it does not exist. \n",
@@ -4027,7 +4030,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Let us do a check to see if all the write and append reflects in the contents**"
+    "Let us do a check to see if all the write and append reflects in the contents"
    ]
   },
   {
@@ -4067,9 +4070,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color = black>**REGULAR EXPRESSIONS** \n",
+    "REGULAR EXPRESSIONS\n",
     "\n",
-    "<font color = black>Regular expression is a sequence of characters that define a search pattern, using features of ‘re’ module in Python, we can filter out data of our Interest with minimal code.\n"
+    "Regular expression is a sequence of characters that define a search pattern, using features of ‘re’ module in Python, we can filter out data of our Interest with minimal code.\n"
    ]
   },
   {
@@ -4173,7 +4176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Now it is time for you to explore various features offered b Regular expressions- The below guide may come in handy**"
+    "Various features offered by Regular expressions- The below guide may come in handy"
    ]
   },
   {
@@ -4216,7 +4219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black>**LAMBDA FUNCTIONS**"
+    "LAMBDA FUNCTIONS"
    ]
   },
   {
@@ -4300,7 +4303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color = black>**MAP**"
+    "MAP"
    ]
   },
   {
@@ -4434,14 +4437,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**filter(function,iterable object)**"
+    "filter(function,iterable object)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**In most cases -the output is a subset of the input**"
+    "In most cases -the output is a subset of the input"
    ]
   },
   {
